[project]
name = "djcues"
version = "0.1.0"
description = "Automated rekordbox cue placement based on phrase analysis"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Matt Croydon" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "pyrekordbox>=0.4.4",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/mcroydon/djcues"
Repository = "https://github.com/mcroydon/djcues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
djcues = "djcues.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/djcues"]

[tool.pytest.ini_options]
testpaths = ["tests"]
